# LedMatrix5x5

./: CMakeLists.txt  LedMatrix5x5.c  README.md  animacao-2.h  diagram.json  tecla-b.c  tecla-b.h  teclac.c  tecladomatricial.c  wokwi.toml
animação_0/: matriz_1A.c
animação_0/libs/teclado_matricial/: teclado_matricial.c
libs/: teclaC.c  tecladomatricial.h
libs/animacao-2/: animacao-2.c  animacao-2.h
libs/tecla-b/: tecla-b.c  tecla-b.h
libs/tecla_0/: animacao_0.c
libs/tecla_0A/: animacao_0.h
libs/tecla_1/: tecla_1.c  tecla_1.h
libs/tecla_A/: led_animation.c  led_animation.h
libs/tecla_d/: animacao.c  animacao.h
libs/tecla_jogo_velha/: tecla_jogo_velha.c
libs/teclac/: tecla_c.c  teclac.h  tecladomatricial.h
libs/teclado_matricial/: teclado_matricial.c
tecla_#/: tecla_#.c  tecla_#.h
tecla_0/: CMakeLists.txt  matriz_1A.c
tecla_0/libs/teclado_matricial/: teclado_matricial.h
tecla_d/: animacao.c  animacao.h
tecla_jogo_velha/: tecla_jogo_velha.c  tecla_jogo_velha.h
